# contexter

./: PLAN.md  README.md
chrome-extension/: .prettierignore  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
chrome-extension/src/: background.ts  manifest.json
chrome-extension/src/components/: ErrorBoundary.tsx  FileSelectionActions.tsx  FileTree.tsx  FileTreeNode.tsx  Header.tsx  LoadingOverlay.tsx  ProjectDetails.tsx  ProjectList.tsx
chrome-extension/src/lib/: api.ts  store.ts  utils.ts
chrome-extension/src/popup/: App.tsx  index.html  main.tsx
chrome-extension/src/settings/: Settings.tsx  index.html  main.tsx
chrome-extension/src/styles/: globals.css
server/: Cargo.toml  REPO_MAPPER.md  SERVER.md  iris.toml
server/src/: cli.rs  cli_handlers.rs  contexter.rs  lib.rs  repo_mapper.rs  server.rs  server_handlers.rs  utils.rs
server/tests/: api_key_tests.rs  contexter_tests.rs  integration_tests.rs
